--- a/funktsioon.html
+++ b/funktsioon.html
@@ -26,6 +26,7 @@
     <input type="number" id="kast3" placeholder="x-i v2him"> ,
     <input type="number" id="kast4" placeholder="x-i suurim"> 
     <input type="button" id="nupp" value="="  onClick="saadaAndmed()">
+    <div id="vastus1">tere</div>
     <div id="vastus">vastuse koht</div>
   </body>
 </html>
