--- a/src/main/resources/public/geeniLeht.html
+++ b/src/main/resources/public/geeniLeht.html
@@ -1,63 +1,97 @@
 <!DOCTYPE HTML>
 
-<html>
+<html lang="et"></html>
 	<head>
+	<meta charset="utf-8">
 	<title>Geenid</title>
 	<script>
-		var xhr=new XMLHttpRequest();
+		let xhr=new XMLHttpRequest();
 		xhr.onreadystatechange=andmedSaabusid;
 		function andmedSaabusid(){
 			if(xhr.readyState==4){
 			console.log(xhr.responseText);
 				if(xhr.responseText.endsWith("salvestatud") || xhr.responseText.endsWith("kustutatud") || xhr.responseText.endsWith("puudub")){
-					document.getElementById("teatekiht").innerHTML=xhr.responseText;
-					kysiElanikud();
+					document.getElementById("teated").innerHTML=xhr.responseText;
+					kysiGeenid();
 				} else {
-					kuvaElanikud();
+					kuvaGeenid();
 				}
 			}
 		}
 		
-		function kuvaElanikud(){
-			var obj=JSON.parse(xhr.responseText);
-			var s="<ul>";
-			for(var i=0; i<obj.length; i++){
-				s+="<li onclick='kustutamine(\""+obj[i].nimi+"\")'>"+obj[i].nimi+", korter nr: "+obj[i].korter+", kommunaalid: "+obj[i].kommunaalid+" eurot, tasumine: "+obj[i].tasumine+"</li>";
+		function kuvaGeenid(){
+			let obj=JSON.parse(xhr.responseText);
+			let s="<ul>";
+			for(let i=0; i<obj.length; i++){
+				s+="<li>"+"Id: "+obj[i].id+ ". "+obj[i].nimetus+"- alleel1: "+obj[i].alleel1+", alleel2: "+obj[i].alleel2+"</li>";
 			}
 			s+="</ul>";
-			document.getElementById("elanikekiht").innerHTML=s;
+			document.getElementById("geenid").innerHTML=s;
 		}
 		
-		function kysiElanikud(){
+		function kysiGeenid(){
 			xhr.open("GET", "/loetelu", true);
-			xhr.send();
+			xhr.send(null);
 		}
 		
 		function lisamine(){
-			var elanikuNimi="/elanikud?nimi="+document.getElementById("kast1").value+"&korter="+document.getElementById("kast2").value+"&kommunaalid="+document.getElementById("kast3").value+"&tasumine="+document.getElementById("kast4").value;
-			xhr.open("GET", elanikuNimi, true);
-			xhr.send();
+            let uusGeenNimi="/lisauusGeen?nimetus="+document.getElementById("kast1").value+"&alleel1Ema="+document.getElementById("kast2").value+"&alleel2Ema="+document.getElementById("kast3").value+"&alleel1Isa="+document.getElementById("kast4").value+"&alleel2Isa="+document.getElementById("kast5").value;
+			xhr.open("GET", uusGeenNimi, true);
+			xhr.send(null);
+			document.getElementById("lapseGeen").innerHTML = xhr.responseText;
 		}
 		
-		function kustutamine(nimi){
-			var elanikuNimi="/kustuta?nimi="+nimi;
-			xhr.open("GET", elanikuNimi, true);
-			xhr.send();
+		function otsiGeeni(){
+		    let geeniOtsing="/otsiGeeni?nimetus="+nimetus.value;
+		    xhr.open("GET", geeniOtsing, false);
+		    xhr.send(null);
+		    document.getElementById("geeniotsing").innerHTML = xhr.responseText;
 		}
 		
+		function valiGeen(){
+		    let geen = [];
+		    let geeniNimetus = document.getElementById("valiNimetus").innerHTML;
+		    let kogus = document.getElementById("leitud").innerHTML;
+		    for(let i=0; i<kogus; i++){
+		        if(document.getElementById("valitud"+i).checked){
+		            geen.push(document.getElementById("valiAlleel1"+i).innerHTML);
+		            geen.push(document.getElementById("valiAlleel2"+i).innerHTML);
+		        }
+		    }
+		    let uusLisatudGeen="/lisauusGeen?nimetus="+geeniNimetus+"&alleel1Ema="+geen[0]+"&alleel2Ema="+geen[1]+"&alleel1Isa="+geen[2]+"&alleel2Isa="+geen[3];
+			xhr.open("GET", uusLisatudGeen, true);
+			xhr.send(null);
+			document.getElementById("uusLapseGeen").innerHTML = xhr.responseText;
+		}
 	</script>
 	</head>
-	Alleelinimetus: <input type="text" id ="kast1" /><br><br>
-	Isa alleel1: <input type="text" id ="kast2" /><br><br>
-	Isa alleel2: <input type="text" id ="kast2" /><br><br>
+	<h1>Geenid</h1>
+	Alleeli nimetus: <input type="text" id ="kast1" /><br><br>
+	<p><b>Lisa ema alleelid</b></p>
 	Ema alleel1: <input type="text" id ="kast2" /><br><br>
-	Ema alleel2: <input type="text" id ="kast2" /><br><br>
-	Lapse alleel on: <input type="text" id ="kast3" /><br><br>
+	Ema alleel2: <input type="text" id ="kast3" /><br><br>
+	<p><b>Lisa isa alleelid</b></p>
+	Isa alleel1: <input type="text" id ="kast4" /><br><br>
+	Isa alleel2: <input type="text" id ="kast5" /><br><br>
 	
 	
-	<input type="button" value="Lisa elanik" onclick="lisamine()" />
-	<body onload="kysiElanikud()">
-	<div id="teatekiht"></div>
-		<div id="elanikekiht"></div>
+	<input type="button" value="Lisa geen" onclick="lisamine()" />
+	<br>
+
+	<body onload="kysiGeenid()">
+	<br>
+	<div id="geeniotsing">
+	    <input type="text" id="nimetus"><br>
+	    <input type="button" value="Otsi geeni nime järgi" onclick="otsiGeeni()">
+	</div>
+	<br><br>
+	<input type="button" value="Vali geenid" onclick="valiGeen()">
+	<br>
+	<div id="lapseGeen"></div>
+	<div id="uusLapseGeen"></div>
+	<div id="teated"></div>	
+	<p><b>Andmebaasis olevad geenid:</b></p>
+	<div id="geenid"></div>
+
 	</body>
 </html>
